ailist/src/labeled_augmented_array.h

//-------------------------------------------------------------------------------------

typedef struct {
	int64_t nr, mr;						// Number of intervals
	int64_t nl, ml;						// Number of unique labels
	labeled_interval_t *interval_list;	// List of interval_t objects
	int *nc;							// Number of components
	int *lenC;							// Length of components
	int *idxC;							// Index of components in interval_list
	uint32_t *maxE;						// Augmentation
	uint32_t *first;					// Record first position of intervals
	uint32_t *last;						// Record last position of intervals
	uint32_t *label_count;				// Record number of label values
	uint32_t *id_index;					// Record id index values
	void *label_map;					// Hash table to convert labels to int
	void *rev_label_map;				// Hash table to convert labels to int
} labeled_aiarray_t;
typedef struct {
	int size;							// Current size
    int max_size;						// Maximum size
	labeled_aiarray_t *ail;				// Store labeled_aiarray
	long *indices;						// Store indices
} overlap_label_index_t;
// Query aiarray intervals from aiarray
array_query_t *labeled_aiarray_query_from_labeled_aiarray(labeled_aiarray_t *ail, labeled_aiarray_t *ail2);
// Query aiarray intervals and record original index
overlap_label_index_t *labeled_aiarray_query_single_with_index(labeled_aiarray_t *ail, uint32_t qs, uint32_t qe, const char *label_name);
// Query aiarray intervals and record original index from labled_aiarray
overlap_label_index_t *labeled_aiarray_query_with_index_from_labeled_aiarray(labeled_aiarray_t *ail, labeled_aiarray_t *ail2);
//-------------------------------------------------------------------------------------
// labeled_aiarray_has_hits.c
//=====================================================================================

// Determine if hit is present for each query interval
void labeled_aiarray_has_hit_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[],
                                        const char label_names[], int length, int label_str_len, uint8_t has_hit[]);
//-------------------------------------------------------------------------------------
// labeled_aiarray_nhits.c
//=====================================================================================

// Determine number of hits for interval
long labeled_aiarray_nhits(labeled_aiarray_t *ail, long start, long end, const char *label_name);
// Determine number of hits for interval of a length
long labeled_aiarray_nhits_length(labeled_aiarray_t *ail, long start, long end, const char *label_name, int min_length, int max_length);
// Determine number of hits for each query interval
void labeled_aiarray_nhits_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[],
										const char *label_names[], int length, int nhits[]);
// Determine number of hits of a length for each query interval
void labeled_aiarray_nhits_from_array_length(labeled_aiarray_t *ail, const long starts[], const long ends[],
											const char *label_names[], int length, int nhits[], int min_length,
											int max_length);
// Calculate n hits within bins
void labeled_aiarray_bin_nhits(labeled_aiarray_t *ail, labeled_aiarray_t *bins, double nhits[], int bin_size);
// Calculate n hits of a length within bins
void labeled_aiarray_bin_nhits_length(labeled_aiarray_t *ail, labeled_aiarray_t *bins, double nhits[], int bin_size,
										int min_length, int max_length);
//-------------------------------------------------------------------------------------
// labeled_aiarray_wps.c
//=====================================================================================

// Calculate Window Protection Score for a label
void labeled_aiarray_label_wps(labeled_interval_t *interval_list, double wps[], uint32_t protection, int nr, int first, int last);
// Calculate Window Protection Score
void labeled_aiarray_wps(labeled_aiarray_t *ail, double wps[], uint32_t protection);
// Calculate Window Protection Score for a label of a length
void labeled_aiarray_label_wps_length(labeled_interval_t *interval_list, double wps[], uint32_t protection, int nr, int first, int last,
										int min_length, int max_length);
// Calculate Window Protection Score of a length
void labeled_aiarray_wps_length(labeled_aiarray_t *ail, double wps[], uint32_t protection, int min_length, int max_length);
//-------------------------------------------------------------------------------------
// labeled_aiarray_coverage.c
//=====================================================================================

// Determine coverage for an interval
void labeled_aiarray_interval_coverage(labeled_aiarray_t *ail, int start, int end, const char *label_name, int coverage[]);
// Calculate coverage for a label
void labeled_aiarray_label_coverage(labeled_interval_t *interval_list, double coverage[], const char *label_name, int nr);
// Calculate coverage
void labeled_aiarray_coverage(labeled_aiarray_t *ail, double coverage[]);
//-------------------------------------------------------------------------------------
// labeled_aiarray_merge.c
//=====================================================================================

// Merge nearby intervals
labeled_aiarray_t *labeled_aiarray_merge(labeled_aiarray_t *ail, uint32_t gap);
//-------------------------------------------------------------------------------------
// labeled_aiarray_filter.c
//=====================================================================================

// Filter labeled_aiarray by length
labeled_aiarray_t *labeled_aiarray_length_filter(labeled_aiarray_t *ail, int min_length, int max_length);
// Randomly downsample
labeled_aiarray_t *labeled_aiarray_downsample(labeled_aiarray_t *ail, double proportion);
// Randomly downsample with original index
overlap_label_index_t *labeled_aiarray_downsample_with_index(labeled_aiarray_t *ail, double proportion);
//-------------------------------------------------------------------------------------
// labeled_aiarray_extract.c
//=====================================================================================

// Extract start for labeled_aiarray
void labeled_aiarray_extract_starts(labeled_aiarray_t *ail, long starts[]);
// Extract end for labeled_aiarray
void labeled_aiarray_extract_ends(labeled_aiarray_t *ail, long ends[]);
// Extract id for labeled_aiarray
void labeled_aiarray_extract_ids(labeled_aiarray_t *ail, long ids[]);